# Computer-Vision-with-OpenCV-4-and-Qt6

chapter_2/hello_qt_opencv/: CMakeLists.txt
chapter_2/hello_qt_opencv/inc/: mainwindow.h
chapter_2/hello_qt_opencv/src/: main.cxx  mainwindow.cxx
chapter_2/hello_qt_opencv/ui/: mainwindow.ui
chapter_3/hello_qt_opencv/: CMakeLists.txt
chapter_3/hello_qt_opencv/inc/: mainwindow.h
chapter_3/hello_qt_opencv/res/: resources.qrc
chapter_3/hello_qt_opencv/res/qm/: ru.qm
chapter_3/hello_qt_opencv/src/: mainwindow.cxx
chapter_3/hello_qt_opencv/ts/: ru.ts
chapter_3/hello_qt_opencv/ui/: mainwindow.ui
chapter_3/median_filter_plugin/: CMakeLists.txt
chapter_3/median_filter_plugin/inc/: cvplugininterface.h  median_filter_plugin.h
chapter_3/median_filter_plugin/src/: median_filter_plugin.cxx
chapter_3/plugin_user/: CMakeLists.txt
chapter_3/plugin_user/inc/: cvplugininterface.h  mainwindow.h
chapter_3/plugin_user/src/: mainwindow.cxx
chapter_3/plugin_user/ui/: mainwindow.ui
chapter_4/image_viewer/: CMakeLists.txt
chapter_4/image_viewer/inc/: mainwindow.h
chapter_4/image_viewer/src/: mainwindow.cxx
chapter_4/painter_test/: CMakeLists.txt
chapter_4/painter_test/inc/: mainwindow.h  qblinkingwidget.h
chapter_4/painter_test/src/: main.cxx  mainwindow.cxx  qblinkingwidget.cxx
chapter_4/painter_test/ui/: mainwindow.ui
chapter_5/computer_vision/: CMakeLists.txt
chapter_5/computer_vision/mainapp/: CMakeLists.txt
chapter_5/computer_vision/mainapp/inc/: mainwindow.h  qenhancedgraphicsview.h
chapter_5/computer_vision/mainapp/src/: main.cxx  mainwindow.cxx  qenhancedgraphicsview.cxx
chapter_5/computer_vision/template_plugin/: CMakeLists.txt
chapter_5/computer_vision/template_plugin/inc/: template_plugin.h
chapter_5/computer_vision/template_plugin/src/: template_plugin.cxx
chapter_5/graphics_viewer/: CMakeLists.txt
chapter_5/graphics_viewer/inc/: mainwindow.h  qcustomgraphicseffect.h  qenhancedgraphicsview.h
chapter_5/graphics_viewer/src/: mainwindow.cxx  qcustomgraphicseffect.cxx  qenhancedgraphicsview.cxx
chapter_6/color_plugin/: CMakeLists.txt
chapter_6/color_plugin/inc/: color_plugin.h
chapter_6/color_plugin/src/: color_plugin.cxx
chapter_6/copymakeborder_plugin/: CMakeLists.txt
chapter_6/copymakeborder_plugin/inc/: copymakeborder_plugin.h
chapter_6/copymakeborder_plugin/src/: copymakeborder_plugin.cxx
chapter_6/filter_plugin/: CMakeLists.txt
chapter_6/filter_plugin/inc/: filter_plugin.h
chapter_6/filter_plugin/src/: filter_plugin.cxx
chapter_6/fourier_plugin/: CMakeLists.txt
chapter_6/fourier_plugin/inc/: fourier_plugin.h
chapter_6/fourier_plugin/src/: fourier_plugin.cxx
chapter_6/segmentation_plugin/: CMakeLists.txt
chapter_6/segmentation_plugin/inc/: segmentation_plugin.h
chapter_6/segmentation_plugin/src/: segmentation_plugin.cxx
chapter_6/transform_plugin/: CMakeLists.txt
chapter_6/transform_plugin/inc/: transform_plugin.h
chapter_6/transform_plugin/src/: transform_plugin.cxx
chapter_7/keypoint_plugin/: CMakeLists.txt
chapter_7/keypoint_plugin/inc/: keypoint_plugin.h
chapter_7/keypoint_plugin/src/: keypoint_plugin.cxx
chapter_8/multithreaded_cv/: CMakeLists.txt
chapter_8/multithreaded_cv/inc/: mainwindow.h  videoprocessor.h  videoprocessorthread.h
chapter_8/multithreaded_cv/src/: main.cxx  mainwindow.cxx  videoprocessor.cxx  videoprocessorthread.cxx
